<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/verdeFondo"
    tools:context=".TreeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="center"
        android:src="@mipmap/ic_tree_color_foreground" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingRight="15dp"
        android:paddingLeft="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/nuevo_arbol"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/fecha"
            android:textSize="16sp"
            android:layout_marginBottom="3dp"/>
        <EditText
            android:id="@+id/et_fecha_plantacion"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="5dp"
            android:textSize="16sp"
            android:background="@drawable/rounded_square_edittext"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/especie"
            android:textSize="16sp"
            android:layout_marginBottom="3dp"/>
        <EditText
            android:id="@+id/et_especia"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/rounded_square_edittext"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/ubicacion"
            android:textSize="16sp"
            android:layout_marginBottom="3dp"/>
        <EditText
            android:id="@+id/et_ubicacion"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/rounded_square_edittext"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/salud"
            android:textSize="16sp"
            android:layout_marginBottom="3dp"/>
        <EditText
            android:id="@+id/et_salud"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/rounded_square_edittext"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Mes:"
            android:textSize="16sp"
            android:layout_marginBottom="3dp"/>
        <Spinner
            android:id="@+id/spiner_mes_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/rounded_square_edittext"/>

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btn_plantar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:backgroundTint="@color/verdeOscuro"
            android:text="@string/btn_plantar"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btn_volver"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:backgroundTint="@color/rojo"
            android:text="@string/btn_volver"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</LinearLayout>