<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/azulOscuro"
    android:gravity="center_vertical"
    tools:context=".RegistrarseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@mipmap/ic_nube_foreground" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingRight="15dp"
            android:paddingLeft="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/title_Registro"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/correo"
                android:textSize="16sp"
                android:layout_marginBottom="3dp"/>
            <EditText
                android:id="@+id/et_correo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:padding="5dp"
                android:textSize="16sp"
                android:background="@drawable/rounded_square_edittext"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/pass"
                android:textSize="16sp"
                android:layout_marginBottom="3dp"/>
            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/rounded_square_edittext"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nombre"
                android:textSize="16sp"
                android:layout_marginBottom="3dp"/>
            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/rounded_square_edittext"/>

            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/btn_registrarse"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:backgroundTint="@color/rojo"
                android:text="@string/btn_registrarse"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/btn_iniciar"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:backgroundTint="@color/verdeOscuro"
                android:text="@string/btn_iniciar"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>