<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/rojo"
    tools:context=".ConcejosActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="@string/title_concejo"
        android:textAlignment="center"
        android:padding="50dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btn_siguiente"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/verdeOscuro"
            android:text="@string/btn_siguiente"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btn_volver"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/verdeOscuro"
            android:text="@string/btn_volver"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

</LinearLayout>