<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/azulfondo"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@mipmap/ic_sun_foreground"
        android:scaleType="centerCrop"
        android:rotation="180"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/total_arboles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/azulOscuro"
            android:textAlignment="center"
            android:layout_gravity="center"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@drawable/rounded_top" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:orientation="horizontal">

               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:orientation="vertical"
                   android:gravity="center">
                   <ImageView
                       android:id="@+id/btn_nuevo_arbol"
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:layout_weight="3"
                       android:adjustViewBounds="true"
                       android:background="@android:color/transparent"
                       android:scaleType="fitCenter"
                       android:src="@mipmap/ic_tree_color_white_foreground" />
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:layout_weight="1"
                       android:text="@string/btn_nuevo"
                       android:textStyle="bold"
                       android:textSize="16sp"
                       android:textAlignment="center"/>
               </LinearLayout>


               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:orientation="vertical"
                   android:gravity="center">
                   <ImageView
                       android:id="@+id/btn_mis_arboles"
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:layout_weight="3"
                       android:adjustViewBounds="true"
                       android:background="@android:color/transparent"
                       android:scaleType="fitCenter"
                       android:src="@mipmap/ic_tree_color_foreground" />
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:layout_weight="1"
                       android:text="@string/btn_lista"
                       android:textStyle="bold"
                       android:textSize="16sp"
                       android:textAlignment="center"/>
               </LinearLayout>
           </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/btn_concejos"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_farm_foreground" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/btn_concejos"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textAlignment="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/btn_codos"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_co2_foreground" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/btn_co2"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textAlignment="center"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>


</LinearLayout>
